[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ArchiverForGooglePhotos"
description = "Google Photos Archiver"
#dynamic = ["version"]
version = "2.2.0"
dependencies = [
  "black"
  ,"colorama"
  ,"cx-freeze"
  ,"google-api-python-client"
  ,"google-auth-httplib2"
  ,"google-auth-oauthlib"
  ,"isort"
  ,"piexif"
  ,"pillow"
  ,"requests"
  ,"sanitize-filename"
  ,"tqdm"
]
requires-python = ">=3.9"
authors = [
  {name = "Nicholas Dawson", email = "pradyun@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/NicholasDawson/ArchiverForGooglePhotos"
Repository = "https://github.com/NicholasDawson/ArchiverForGooglePhotos.git"
Issues = "https://github.com/NicholasDawson/ArchiverForGooglePhotos/issues"
